bugfix-love2d: class variables no longer shared across instances

--- a/src/less/imports.less
+++ b/src/less/imports.less
@@ -6,6 +6,31 @@
     src: url("./includes/fonts/inconsolata/Inconsolata.otf") format("opentype");
 }
 
+@font-face {
+    font-family: "Roboto-Regular";
+    src: url("./includes/fonts/roboto/Roboto-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "ProggySquare";
+    src: url("./includes/fonts/proggy/ProggySquare.ttf/ProggySquare.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "ProggyClean";
+    src: url("./includes/fonts/proggy/ProggyClean.ttf/ProggyClean.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Monofur";
+    src: url("./includes/fonts/monofur/monof55.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "ProFont";
+    src: url("./includes/fonts/profont/ProFontWindows.ttf") format("truetype");
+}
+
 *{
     font-family: 'Inconsolata', sans-serif;
 }
