--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -14,4 +14,5 @@
 @text-highlight-green: #c5e1a5;
 @text-highlight-amber: #ffe082;
 
-@font-size: 12px;
+@font-size: 16px;
+@ui-subcategory-fsize: 24px;
