--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -98,18 +98,24 @@
     padding: 5px;
     border-radius: 5px;
     outline: none;
+    border-color: black;
+    border-width: 2px;
 }
 
 .ui-input {
     .win-nodrag();
 
     border: 20px solid transparent;
-    border-image: linear-gradient(to right, black 0%, transparent 90%, transparent 100%);
+    border-image: linear-gradient(to right, rgba(0,0,0,0.5) 0%, transparent 90%, transparent 100%);
     border-image-slice: 1;
     border-width: 0px;
     padding: 3px;
     border-bottom-width: 1px;
     outline: none;
+    margin-left: 10px;
+    width: 60px;
+    background: rgba(255,255,255,0.5);
+    border-radius: 2px;
 }
 .ui-checkbox {
     .win-nodrag();
