--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -7,6 +7,11 @@
     bottom: 0px;
     right: 0px;
     left: 0px;
+    pointer-events: none;
+
+    * {
+        pointer-events: all;
+    }
 }
 
 .ui-settings {
@@ -30,7 +35,7 @@
     	.category {
     		.ui-button-rect();
 
-    		font-size: 18px;
+    		font-size: @font-size;
 		    width: 100%;
 		    height: 36px;
             margin: 0px;
@@ -56,10 +61,13 @@
         max-width: 100%;
         max-height: 100%;
         overflow-y: auto;
-        margin-right: 204px;
+        margin-right: 172px;
 
     	.subcategory {
-		    font-size: 20px;
+            .no-select();
+
+            cursor: default;
+		    font-size: @ui-subcategory-fsize;
 			margin: 10px;
     	}
   		>div {
