--- a/src/less/main.less
+++ b/src/less/main.less
@@ -24,8 +24,8 @@ body {
 		height: 100%;
 		margin-left: 200px;
 		padding-right: 200px;
-		margin-top: 34px;
-	    padding-bottom: 34px;
+		margin-top: @titlebar-height;
+	    padding-bottom: @titlebar-height;
 	    box-sizing: border-box;
 		z-index: @ide-z-back;
 
