--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -3,7 +3,7 @@
 .ui-dialog-container {
     margin-left: 200px;
     position: absolute;
-    top: 34px;
+    top: @titlebar-height;
     bottom: 0px;
     right: 0px;
     left: 0px;
@@ -27,6 +27,7 @@
     .categories {
     	position: relative;
 	    display: inline-block;
+        width: @ui-categories-width;
 	    height: 100%;
 	    vertical-align: top;
 	    text-align: center;
@@ -61,7 +62,7 @@
         max-width: 100%;
         max-height: 100%;
         overflow-y: auto;
-        margin-right: 172px;
+        margin-right: @ui-categories-width;
 
     	.subcategory {
             .no-select();
