--- a/src/includes/blanke-kit/blanke-ui.css
+++ b/src/includes/blanke-kit/blanke-ui.css
@@ -339,3 +339,25 @@
   border-radius: 2px;
   margin-left: 10px;
 }
+.ui-modal {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  z-index: 20;
+  right: 0px;
+  text-align: center;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 40px;
+}
+.ui-modal > .modal-body {
+  margin: 10px;
+}
+.ui-modal button:hover[data-action='yes'] {
+  background-color: #4caf50;
+  color: white;
+}
+.ui-modal button:hover[data-action='no'] {
+  background-color: #f44336;
+  color: white;
+}
