--- a/src/includes/blanke-kit/blanke-ui.less
+++ b/src/includes/blanke-kit/blanke-ui.less
@@ -239,3 +239,31 @@
 
     }
 }
+
+.ui-modal {
+    position: absolute;
+    top: 50%;
+    left: 0px;
+    z-index: 20;
+    right: 0px;
+    text-align: center;
+    transform: translateY(-50%);
+    background-color: rgba(255,255,255,0.95);
+    padding: 40px;
+
+    > .modal-body {
+        margin: 10px;
+    }    
+
+    button:hover {
+        &[data-action='yes']  {
+            background-color: #4caf50;
+            color: white;
+        }
+
+        &[data-action='no']  {
+            background-color: #f44336;
+            color: white;
+        }
+    }
+}
