--- a/src/less/main.less
+++ b/src/less/main.less
@@ -20,6 +20,15 @@ body {
 	display: inline-block;
 
 	.workspace {
+		box-sizing: border-box;
+	    z-index: 20;
+	    display: inline-block;
+	    position: absolute;
+	    top: 44px;
+	    left: 200px;
+	    right: 0px;
+	    bottom: 0px;
+		/*
 		width: 100%;
 		height: 100%;
 		margin-left: 200px;
@@ -30,6 +39,7 @@ body {
 		z-index: @ide-z-back;
 
 		display: inline-block;
+		*/
 	}
 }
 
