conditional settings for mono/stereo audio

--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -72,6 +72,10 @@
     			margin: 10px;
                 font-size: @ui-subcategory-fsize;
             }
+
+            >.ui-checkbox {
+                margin-right: 20px;
+            }
     	}
   		>div {
   			margin: 4px 25px;
