--- a/src/modules/spritesheet/less/main.less
+++ b/src/modules/spritesheet/less/main.less
@@ -23,6 +23,7 @@ body .workspace.spritesheet {
     .preview-container {
         .no-select();
 
+        width: 100%;
         height: 50%;
         padding: 0px 10px;
 
