--- a/src/less/imports.less
+++ b/src/less/imports.less
@@ -31,6 +31,6 @@
     src: url("./includes/fonts/profont/ProFontWindows.ttf") format("truetype");
 }
 
-*{
-    font-family: 'Inconsolata', sans-serif;
+*:not(.no-global-font) {
+    font-family: 'Inconsolata', sans-serif; 
 }
