--- a/src/less/ui.less
+++ b/src/less/ui.less
@@ -21,7 +21,7 @@
     left: 0px;
     right: 0px;
     z-index: @ide-z-front;
-    background: @ide-background;
+    background: var(--eng-color);
     white-space: nowrap;
 
     .categories {
@@ -36,6 +36,7 @@
     	.category {
     		.ui-button-rect();
 
+            background: none;
     		font-size: @font-size;
 		    width: 100%;
 		    height: 36px;
