--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -14,8 +14,11 @@
 @text-highlight-green: #c5e1a5;
 @text-highlight-amber: #ffe082;
 
-@font-size: 16px;
+@font-size: 14px;
 @ui-subcategory-fsize: 24px;
 @ui-categories-width: 188px;
 
-@titlebar-height: 44px;
+@titlebar-height: 38px;
+
+:root {
+}
