--- a/src/plugins/code_editor/less/main.less
+++ b/src/plugins/code_editor/less/main.less
@@ -1,21 +1,30 @@
 @import "imports";
 
-@import (inline) "./../node_modules/codemirror/lib/codemirror.css";
-@import (inline) "./../node_modules/codemirror/theme/monokai.css";
+@eng-background-color: pink;
 
 #code {
     width: 100%;
     height: 100%;
     
-    font-family: initial !important;
-    box-sizing: border-box;
+    /* font-family: initial !important; */
+    box-sizing: border-box; 
 
 	.CodeMirror {
 		width: 100%;
 		height: 100%;
-
-		.CodeMirror-scroll {
-			
-		}
 	}
+
+
+	.CodeMirror {
+		border-top: 1px solid black;
+		border-bottom: 1px solid black;
+	}
+	.cm-matchhighlight {
+		color: black;
+		background-color: var(--eng-color);
+	}
+	.CodeMirror-selection-highlight-scrollbar {
+		background-color: rgba(0,0,0,0.25);
+	}
+
 }
